read resource file update